# actix-web-and-lapin-example

./: Cargo.toml  LICENSE
src/: datasource.rs  main.rs  websocket.rs
