[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2"
actix-web = "4"
actix = "0.13"
actix-web-actors = "4.1"
env_logger = "0.9"
log = "0.4"
tokio = {version = "1", features = ["full"]}
futures-lite = "1"